<resources>
    <!--Share-->
    <string name="app_name">Firebase_practice</string>
    <!--MainActivity-->
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password(length at least 6)</string>
    <string name="register_user">Register user</string>
    <string name="already_registered">Already Registered? Sign in here</string>
    <!--loginActivity-->
    <string name="login">Login</string>
    <string name="not_have_account">Not have an account? Sign up here</string>
    <string name="btn_forget_password">Forget Password ?</string>
    <!--logoutActivity-->
    <string name="user_name">Username</string>
    <string name="logout">logout</string>
    <string name="chat">chat</string>
    <!--profileActivity-->
    <string name="input">input</string>
    <string name="sent">sent</string>
    <!--MainActivity.java-->
    <string name="enter_username">Please enter username</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="email_incorrect">Incorrect email format</string>
    <string name="cant_instance">Could not instance..., please try again</string>
    <string name="email_exist">email already exist</string>
    <string name="registering">Registering User...</string>
    <string name="password_incorrect">password length must be at least 6</string>
    <!--ResetPWActivity-->
    <string name="forget_your_password">Forget your Password?</string>
    <string name="reset_password_instruction">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="edt_email">Your email here</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back_resetpw">Back</string>

</resources>
